--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
 * Add imputation capability
 * Add support for Jarvis-Patrick clustering
 * Implement this method for HVG discovery: https://www-nature-com.proxy.kib.ki.se/articles/nmeth.2645#methods (requires ERCC genes)
+* Add support for the LargeVis embedding method: https://github.com/lferry007/LargeVis
